Files for website hopefully all of them

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+---
+layout: home
+title: Anna A. Nagel
+---
+<img align="left" src="https://raw.githubusercontent.com/nage0178/nage0178.github.io/refs/heads/main/assets/img/portrait.jpeg" width="40%" style="padding-right:10px" />
+
+I'm an evolutionary biologist interested in developing and applying statistical genetic methods.
+Most of my work focuses on Bayesian inference methods on the interface between population genetics and phylogenetics.
+I completed my PhD at the University of California, Davis under the supervision of Bruce Rannala.
+Now, I'm a postdoc with Michael Landis at Washington University in St.Louis. 
